[project]
name = "monusac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "imagecodecs>=2025.8.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.12.0.88",
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "scikit-image>=0.25.2",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.1.1",
    "tifffile>=2025.6.11",
    "torch>=2.8.0",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
